fast init landing, auth & meeting

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write . --ignore-path .prettierignore"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.8.4",
     "@heroui/system": "2.4.22",
     "@heroui/theme": "2.4.22",
